--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title WraptGratitude
+    %title Wrapt with Gratitude
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
@@ -14,6 +14,7 @@
           %ul.nav.navbar-nav
             %li= link_to "Home", root_path
             %li= link_to "Products", products_path
+            %li= link_to "Surveys", surveys_path
 
 
 
