survey question options

--- a/app/views/survey_questions/_form.html.haml
+++ b/app/views/survey_questions/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@survey_question) do |f|
+= simple_form_for @survey_question, url: url do |f|
   = f.error_notification
 
   .form-inputs
