--- a/app/views/survey_questions/new.html.haml
+++ b/app/views/survey_questions/new.html.haml
@@ -1,6 +1,6 @@
 %h1 New survey question
 
 
-= render 'form'
+= render 'form', url: survey_questions_path(@survey)
 
 = link_to 'Back', edit_survey_path(@survey)
