--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,6 +14,7 @@
           %ul.nav.navbar-nav
             %li= link_to "Home", root_path
             %li= link_to "Products", products_path
+            %li= link_to "Product Categories", product_categories_path
             %li= link_to "Surveys", surveys_path
 
 
