--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,11 +2,7 @@
 
 %h1
   = @product.title
-  %small
-    = link_to 'Edit', edit_product_path(@product)
-    \|
-    = link_to 'Back', products_path
-
+  = link_to 'Edit', edit_product_path(@product), class: 'btn btn-default btn-sm'
 
 %p
   = @product.description
@@ -14,6 +10,10 @@
 %p
   %b Price:
   = number_to_currency @product.price
+
+%p
+  - @product.product_categories.each do |category|
+    %span.label.label-default= category.name
 
 %p
   - if @product.public?
