flash alert area

--- a/app/views/home_pages/show.html.haml
+++ b/app/views/home_pages/show.html.haml
@@ -4,9 +4,7 @@
 
 %p This preliminary tool allows site administrators to create a catalog of Products, design Surveys for profiling gift recipients, and create Training Sets that control how survey responses impact product recommendations.
 
-%ul.nav.navbar-nav
-  %li= link_to "Home", root_path
-  %li= link_to "Products", products_path
-  %li= link_to "Product Categories", product_categories_path
-  %li= link_to "Surveys", surveys_path
+%ul.nav.nav-pills.nav-stacked
+  %li= link_to "Product Catalog", products_path
+  %li= link_to "Survey Builder", surveys_path
 
