--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,6 +1,6 @@
-%h1 Listing products
+%h1 Product Catalog
 
-%p= link_to 'Add a Product', new_product_path, class: 'btn btn-default'
+%p= link_to 'Add a Product', new_product_path, class: 'btn btn-success btn-default'
 
 %table.table
   %thead
