--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -22,6 +22,6 @@
           = link_to 'Edit', edit_product_path(product), class: 'btn btn-primary btn-xs'
           = link_to 'Destroy', product, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
 
-%br
+%p=paginate @products
 
 
