training set product questions

--- a/app/views/home_pages/show.html.haml
+++ b/app/views/home_pages/show.html.haml
@@ -7,4 +7,5 @@
 %ul.nav.nav-pills.nav-stacked
   %li= link_to "Product Catalog", products_path
   %li= link_to "Survey Builder", surveys_path
+  %li= link_to "Training Sets", training_sets_path
 
