--- a/app/views/training_set_product_questions/edit.html.haml
+++ b/app/views/training_set_product_questions/edit.html.haml
@@ -1,6 +1,6 @@
 %h1 Editing training_set_product_question
 
-= render 'form'
+= render 'form', url: training_set_product_question_path(@training_set, @training_set_product_question)
 
 = link_to 'Show', @training_set_product_question
 \|
