--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,6 +16,7 @@
             %li= link_to "Products", products_path
             %li= link_to "Product Categories", product_categories_path
             %li= link_to "Surveys", surveys_path
+            %li= link_to "Training Sets", training_sets_path
 
     
 
