--- a/app/views/training_set_product_questions/new.html.haml
+++ b/app/views/training_set_product_questions/new.html.haml
@@ -1,5 +1,5 @@
 %h1 New training_set_product_question
 
-= render 'form'
+= render 'form', url: training_set_product_questions_path(@training_set)
 
 = link_to 'Back', training_set_product_questions_path
