--- a/app/views/training_sets/index.html.haml
+++ b/app/views/training_sets/index.html.haml
@@ -1,23 +1,24 @@
 %h1 Listing training_sets
 
-%table
+%p= link_to 'New Training set', new_training_set_path, class: 'btn btn-success'
+
+%table.table
   %thead
     %tr
       %th Name
       %th Survey
-      %th
-      %th
       %th
 
   %tbody
     - @training_sets.each do |training_set|
       %tr
         %td= training_set.name
-        %td= training_set.survey_id
-        %td= link_to 'Show', training_set
-        %td= link_to 'Edit', edit_training_set_path(training_set)
-        %td= link_to 'Destroy', training_set, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= training_set.survey&.title
+        %td
+          = link_to 'Show', training_set, class: 'btn btn-xs btn-primary'
+          = link_to 'Edit', edit_training_set_path(training_set), class: 'btn btn-xs btn-primary'
+          = link_to 'Destroy', training_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
 %br
 
-= link_to 'New Training set', new_training_set_path
+
