--- a/app/views/training_sets/show.html.haml
+++ b/app/views/training_sets/show.html.haml
@@ -1,11 +1,29 @@
-%p#notice= notice
+%h1= @training_set.name
 
 %p
-  %b Name:
-  = @training_set.name
-%p
   %b Survey:
-  = @training_set.survey_id
+  = @training_set.survey&.title
+
+%h3 Product-Questions
+
+%p= link_to 'Add a New Product Question', new_training_set_product_question_path(@training_set), class: 'btn btn-success'
+
+%table.table
+  %thead
+    %tr
+      %th Product
+      %th Question
+      %th
+  %tbody
+    - @training_set.product_questions.each do |product_question|
+      %tr
+        %td= product_question.product&.title
+        %td= product_question.survey_question&.prompt
+        %td
+          = link_to 'Edit', edit_training_set_product_question_path(@training_set, product_question), class: 'btn btn-xs btn-primary'
+          = link_to 'Destroy', training_set_product_question_path(@training_set, product_question), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
+  
+
 
 = link_to 'Edit', edit_training_set_path(@training_set)
 \|
