assign response impacts

--- a/app/views/training_set_product_questions/edit.html.haml
+++ b/app/views/training_set_product_questions/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Editing training_set_product_question
+%h1 Editing Product Question
 
 = render 'form', url: training_set_product_question_path(@training_set, @training_set_product_question)
-
-= link_to 'Show', @training_set_product_question
-\|
-= link_to 'Back', training_set_product_questions_path
