--- a/app/views/training_set_product_questions/_form.html.haml
+++ b/app/views/training_set_product_questions/_form.html.haml
@@ -4,6 +4,15 @@
   .form-inputs
     = f.association :product
     = f.association :survey_question, label: 'Question', label_method: :prompt, collection: @training_set.survey.questions
+    
+    %h3 Response Impacts
+    %table.table
+      = f.simple_fields_for :response_impacts do |response_impact_fields|
+        %tr
+          %td= response_impact_fields.object.survey_question_option.text
+          %td= response_impact_fields.input :impact, label: false
+
+        =# response_impact_fields.input :impact, label: response_impact_fields.object.survey_question_option.text, input_html: {style: 'margin-left: 20px;'}
 
   .form-actions
     = f.button :submit, "Save"
