--- a/app/views/training_sets/edit.html.haml
+++ b/app/views/training_sets/edit.html.haml
@@ -1,7 +1,3 @@
-%h1 Editing training_set
+%h1 Editing Training Set
 
 = render 'form'
-
-= link_to 'Show', @training_set
-\|
-= link_to 'Back', training_sets_path
