secondary prompt for questions

--- a/app/views/survey_questions/_form.html.haml
+++ b/app/views/survey_questions/_form.html.haml
@@ -3,6 +3,7 @@
 
   .form-inputs
     = f.input :prompt
+    = f.input :secondary_prompt, label: 'Prompt for explanatory text response'
 
   .form-actions
     = f.button :submit
