dedicated controller for multiple choice

--- a/app/views/survey_questions/multiple_choices/_form.html.haml
+++ b/app/views/survey_questions/multiple_choices/_form.html.haml
@@ -6,4 +6,4 @@
     = f.input :secondary_prompt, label: 'Prompt for explanatory text response'
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, 'Save'
