--- a/app/views/survey_questions/multiple_choices/show.haml
+++ b/app/views/survey_questions/multiple_choices/show.haml
@@ -15,11 +15,11 @@
   - @survey_question.options.each do |option|
     %li(style="margin-top: 30px;")
       = option.text
-      - if option.image
+      - if option.image?
         %br
         = image_tag option.image_url(:small)
       %br
       %br
       = link_to 'Edit', edit_survey_multiple_choice_question_option_path(@survey, @survey_question, option), class: 'btn btn-primary btn-xs'
-      = link_to 'Delete', survey_question_multiple_choice_option_path(@survey, @survey_question, option), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger btn-xs'
+      = link_to 'Delete', survey_multiple_choice_question_option_path(@survey, @survey_question, option), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger btn-xs'
 
