--- a/app/views/survey_questions/texts/edit.html.haml
+++ b/app/views/survey_questions/texts/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Editing survey question
+%h1 Editing Text Question
 
 
 = render 'form', url: survey_text_question_path(@survey, @survey_question)
