--- a/app/views/training_sets/index.html.haml
+++ b/app/views/training_sets/index.html.haml
@@ -15,8 +15,8 @@
         %td= training_set.name
         %td= training_set.survey&.title
         %td
-          = link_to 'Show', training_set, class: 'btn btn-xs btn-primary'
-          = link_to 'Edit', edit_training_set_path(training_set), class: 'btn btn-xs btn-primary'
+          = link_to 'Manage Products and Questions', training_set, class: 'btn btn-xs btn-primary'
+          = link_to 'Change Name', edit_training_set_path(training_set), class: 'btn btn-xs btn-primary'
           = link_to 'Destroy', training_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
 
