--- a/app/views/training_set_product_questions/edit.html.haml
+++ b/app/views/training_set_product_questions/edit.html.haml
@@ -1,3 +1,3 @@
 %h1 Editing Product Question
 
-= render 'form', url: training_set_product_question_path(@training_set, @training_set_product_question)
+= render edit_body_partial @training_set_product_question
