survey response builder

--- a/app/views/home_pages/show.html.haml
+++ b/app/views/home_pages/show.html.haml
@@ -8,4 +8,5 @@
   %li= link_to "Product Catalog", products_path
   %li= link_to "Survey Builder", surveys_path
   %li= link_to "Training Sets", training_sets_path
+  %li= link_to "Profile Sets", profile_sets_path
 
