--- a/app/views/profile_sets/index.html.haml
+++ b/app/views/profile_sets/index.html.haml
@@ -13,6 +13,7 @@
       %tr
         %td= profile_set.name
         %td
+          = link_to 'Manage Responses', profile_set_path(profile_set), class: 'btn btn-xs btn-primary'
           = link_to 'Change Name', edit_profile_set_path(profile_set), class: 'btn btn-xs btn-primary'
           = link_to 'Destroy', profile_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
