--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
+ *= require bootstrap-slider
  */
 
 @import "bootstrap-sprockets";
@@ -18,4 +19,8 @@
 
 .main.container {
   min-height: 80vh;
+}
+
+.slider-selection {
+  background: #BABABA;
 }
