--- a/app/views/profile_set_survey_responses/_range_response_fields.html.haml
+++ b/app/views/profile_set_survey_responses/_range_response_fields.html.haml
@@ -1,1 +1,3 @@
-= question_response_fields.input :range_response, label: false
+- response = question_response_fields.object
+- question = response.survey_question
+= question_response_fields.input :range_response, label: false, input_html: { data: {provide: 'slider', slider_min: -1, slider_max: 1, slider_step: '.01', slider_tooltip: 'hide', slider_value: (response.range_response || 0), slider_ticks_labels: "[#{question.min_label.to_json}, #{question.max_label.to_json}]"}, slider_ticks_positions: "[0, 100]" }
