--- a/app/views/home_pages/show.html.haml
+++ b/app/views/home_pages/show.html.haml
@@ -9,4 +9,5 @@
   %li= link_to "Survey Builder", surveys_path
   %li= link_to "Training Sets", training_sets_path
   %li= link_to "Profile Sets", profile_sets_path
+  %li= link_to "Training Set Evaluations", training_set_evaluations_path
 
