--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -9,3 +9,4 @@
         %li= link_to "Surveys", surveys_path
         %li= link_to "Training Sets", training_sets_path
         %li= link_to "Profile Sets", profile_sets_path
+        %li= link_to "Training Set Evaluations", training_set_evaluations_path
