fix slider appearance

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
   min-height: 80vh;
 }
 
-.slider-selection {
-  background: #BABABA;
+body .slider-track {
+  background-color: #BABABA;
+  background-image: none;
 }
