--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,12 +16,8 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-sliders-custom";
 
 .main.container {
   min-height: 80vh;
-}
-
-body .slider-track {
-  background-color: #BABABA;
-  background-image: none;
 }
