--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -18,9 +18,9 @@
         %td= product.description
         %td= number_to_currency product.price
         %td
-          = link_to 'Show', product, class: 'btn btn-primary btn-xs'
+          = link_to 'View', product, class: 'btn btn-primary btn-xs'
           = link_to 'Edit', edit_product_path(product), class: 'btn btn-primary btn-xs'
-          = link_to 'Destroy', product, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
+          = link_to 'Delete', product, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
 
 %p=paginate @products
 
