--- a/app/views/profile_sets/index.html.haml
+++ b/app/views/profile_sets/index.html.haml
@@ -15,6 +15,6 @@
         %td
           = link_to 'Manage Responses', profile_set_path(profile_set), class: 'btn btn-xs btn-primary'
           = link_to 'Change Name', edit_profile_set_path(profile_set), class: 'btn btn-xs btn-primary'
-          = link_to 'Destroy', profile_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
+          = link_to 'Delete', profile_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
 
