--- a/app/views/profile_sets/show.html.haml
+++ b/app/views/profile_sets/show.html.haml
@@ -11,4 +11,4 @@
     %td= response.name
     %td
       = link_to 'Edit', edit_profile_set_survey_response_path(@profile_set, response), class: 'btn btn-xs btn-primary'
-      = link_to 'Destroy', profile_set_survey_response_path(@profile_set, response), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
+      = link_to 'Delete', profile_set_survey_response_path(@profile_set, response), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
