--- a/app/views/training_sets/index.html.haml
+++ b/app/views/training_sets/index.html.haml
@@ -17,6 +17,6 @@
         %td
           = link_to 'Manage Products and Questions', training_set, class: 'btn btn-xs btn-primary'
           = link_to 'Change Name', edit_training_set_path(training_set), class: 'btn btn-xs btn-primary'
-          = link_to 'Destroy', training_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
+          = link_to 'Delete', training_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
 
