--- a/app/views/training_set_evaluations/_breadcrumbs.haml
+++ b/app/views/training_set_evaluations/_breadcrumbs.haml
@@ -1,1 +1,1 @@
-%p= link_to "&laquo; All Evaluations".html_safe, training_set_evaluations_path
+%p= link_to "&laquo; #{@training_set.name}".html_safe, @training_set
