--- a/app/views/home_pages/show.html.haml
+++ b/app/views/home_pages/show.html.haml
@@ -2,11 +2,11 @@
 
 %p Welcome!
 
-%p This preliminary tool allows site administrators to create a catalog of Products, design Surveys for profiling gift recipients, and create Training Sets that control how survey responses impact product recommendations.
+%p This preliminary tool allows site administrators to create a catalog of Products, design Quizzes for creating a gift recipient portrait, and create Training Sets that control how quiz responses impact product recommendations.
 
 %ul.nav.nav-pills.nav-stacked
   %li= link_to "Product Catalog", products_path
-  %li= link_to "Survey Builder", surveys_path
+  %li= link_to "Quiz Builder", surveys_path
   %li= link_to "Training Sets", training_sets_path
   %li= link_to "Profile Sets", profile_sets_path
   %li= link_to "Training Set Evaluations", training_set_evaluations_path
