--- a/app/views/training_sets/show.html.haml
+++ b/app/views/training_sets/show.html.haml
@@ -3,7 +3,7 @@
   = link_to 'Edit Title', edit_training_set_path(@training_set), class: 'btn btn-default'
 
 %p
-  %b Survey:
+  %b Quiz:
   = @training_set.survey&.title
 
 %h3 Product-Questions
