--- a/app/views/survey_question_options/new.html.haml
+++ b/app/views/survey_question_options/new.html.haml
@@ -1,4 +1,4 @@
-%h1 New survey question option
+%h1 New Quiz Question Option
 
 
 = render 'form', url: survey_multiple_choice_question_options_path(@survey, @survey_question)
