--- a/app/views/surveys/_breadcrumbs.haml
+++ b/app/views/surveys/_breadcrumbs.haml
@@ -1,2 +1,2 @@
 - unless params[:action] == 'index'
-  %p= link_to "&laquo; Surveys".html_safe, surveys_path
+  %p= link_to "&laquo; Quizzes".html_safe, surveys_path
