--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -6,11 +6,7 @@
         %li= link_to "Home", root_path
         %li= link_to "Products", products_path
         %li= link_to "Product Categories", product_categories_path
-<<<<<<< HEAD
-        %li= link_to "Quizzes", surveys_path
-=======
-        %li= link_to "Survey Versions", surveys_path
->>>>>>> d5d231400c715a1597e2463cbf71d999573ca2cf
+        %li= link_to "Quiz Versions", surveys_path
         %li= link_to "Training Sets", training_sets_path
         %li= link_to "Profile Sets", profile_sets_path
 
