--- a/app/views/profile_set_survey_responses/_multiple_choice_response_fields.html.haml
+++ b/app/views/profile_set_survey_responses/_multiple_choice_response_fields.html.haml
@@ -1,5 +1,5 @@
 .form-group.radio_buttons.optional.profile_set_survey_response_question_responses_survey_question_option
-  %input{:name => "profile_set_survey_response[question_responses_attributes][0][survey_question_option_id]", :type => "hidden", :value => ""}
+  %input{:name => "profile_set_survey_response[question_responses_attributes][#{question_response_fields.index}][survey_question_option_id]", :type => "hidden", :value => ""}
   - question_response_fields.object.survey_question.options.each do |option|
     %span.radio
       %label{:for => "profile_set_survey_response_question_responses_attributes_#{question_response_fields.index}_survey_question_option_id_#{option.id}"}
