--- a/app/views/training_set_product_questions/_edit_body_range.haml
+++ b/app/views/training_set_product_questions/_edit_body_range.haml
@@ -1,22 +1,35 @@
-= simple_form_for RangeImpactCorrelationSwitching.new(@training_set_product_question), url: training_set_product_question_range_impact_correlation_switchings_path(@training_set, @training_set_product_question) do |f|
+
+= simple_form_for @training_set_product_question, url: training_set_product_question_path(@training_set, @training_set_product_question), html: {class: 'form'} do |f|
   = f.error_notification
 
   .form-inputs
     = render 'product_question_details'
-    
-    %h3 Response Impacts
-    %table.table
-      %thead
-        %tr
-          %th Direction
-          %th Impact
-      %tbody
-        %tr
-          %td= @training_set_product_question.survey_question.min_label
-          %td= @training_set_product_question.range_impact_direct_correlation? ? 'Negative' : 'Positive'
-        %tr
-          %td= @training_set_product_question.survey_question.max_label
-          %td= @training_set_product_question.range_impact_direct_correlation? ? 'Positive' : 'Negative'
 
+    .form-group
+      %label Overall Question Importance
+      %br
+      .slider-with-labels
+        %span.slider-min-label Low
+        = f.input :question_impact, label: false, wrapper: false, input_html: { data: {provide: 'slider', slider_min: -1, slider_max: 1, slider_step: '.01', slider_tooltip: 'hide', slider_value: (f.object.question_impact), slider_selection: 'none' }}
+        %span.slider-min-label High
   .form-actions
-    = f.button :submit, "Switch Direction"
+    = f.submit "Save Importance", class: 'btn btn-primary'
+
+
+%h3 Response Impacts
+%table.table
+  %thead
+    %tr
+      %th Direction
+      %th Impact
+  %tbody
+    %tr
+      %td= @training_set_product_question.survey_question.min_label
+      %td= @training_set_product_question.range_impact_direct_correlation? ? 'Negative' : 'Positive'
+    %tr
+      %td= @training_set_product_question.survey_question.max_label
+      %td= @training_set_product_question.range_impact_direct_correlation? ? 'Positive' : 'Negative'
+
+= simple_form_for RangeImpactCorrelationSwitching.new(@training_set_product_question), url: training_set_product_question_range_impact_correlation_switchings_path(@training_set, @training_set_product_question) do |f|
+  .form-actions
+    = f.button :submit, "Switch Direction", class: 'btn btn-primary'
