--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -6,7 +6,7 @@
         %li= link_to "Home", root_path
         %li= link_to "Products", products_path
         %li= link_to "Product Categories", product_categories_path
-        %li= link_to "Quiz Versions", surveys_path
+        %li= link_to "Quizzes", surveys_path
         %li= link_to "Training Sets", training_sets_path
         %li= link_to "Profile Sets", profile_sets_path
 
