--- a/app/views/profile_sets/_form.html.haml
+++ b/app/views/profile_sets/_form.html.haml
@@ -3,7 +3,7 @@
 
   .form-inputs
     = f.input :name
-    = f.association :survey, disabled: !@profile_set.new_record?
+    = f.association :survey, label: 'Quiz', disabled: !@profile_set.new_record?
 
   .form-actions
     = f.button :submit, 'Save'
