one more removal of word version

--- a/app/views/surveys/index.html.haml
+++ b/app/views/surveys/index.html.haml
@@ -4,4 +4,4 @@
   - @surveys.each do |survey|
     %li= link_to survey.title, survey
 
-%p= link_to 'Create a New Version of a Quiz', new_survey_path, class: 'btn btn-success'
+%p= link_to 'Create a New Quiz', new_survey_path, class: 'btn btn-success'
