--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -8,5 +8,5 @@
         %li{class: ("active" if active_top_nav_section == 'product_categories')}= link_to "Product Categories", product_categories_path
         %li{class: ("active" if active_top_nav_section == 'surveys')}= link_to "Quiz Versions", surveys_path
         %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Training Sets", training_sets_path
-        %li{class: ("active" if active_top_nav_section == 'profile_sets')}= link_to "Profile Sets", 
+        %li{class: ("active" if active_top_nav_section == 'profile_sets')}= link_to "Profile Sets", profile_sets_path
 
