--- a/app/views/product_categories/index.html.haml
+++ b/app/views/product_categories/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Product Categories
 
-= link_to 'Add New Product category', new_product_category_path, class: 'btn btn-default'
+= link_to 'Add New Product Category', new_product_category_path, class: 'btn btn-primary'
 
 %ul(style="margin-top: 10px;")
   - @product_categories.each do |product_category|
