--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -3,7 +3,7 @@
     .navbar-header
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
-        %li= link_to "Home", root_path
+        %li= link_to "Wrapt Admin Home", root_path
         %li= link_to "Products", products_path
         %li= link_to "Product Categories", product_categories_path
         %li= link_to "Quizzes", surveys_path
