--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -4,7 +4,7 @@
 
 %h2
   Questions
-  %small= link_to "Add New Question", new_survey_question_path(@survey), class: 'btn'
+  %small= link_to "Add New Question", new_survey_question_path(@survey), class: 'btn btn-primary'
 - @survey.questions.each_with_index do |question, i|
   %p
     #{i+1}.
