rearrange nav bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import 'bootstrap-custom';
 @import "bootstrap-sliders-custom";
 @import "helpers/mixins";
+@import "modules/navs";
 
 
 .main.container {
