--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -7,6 +7,8 @@
         %li{class: ("active" if active_top_nav_section == 'products')}= link_to "Products", products_path
         %li{class: ("active" if active_top_nav_section == 'product_categories')}= link_to "Product Categories", product_categories_path
         %li{class: ("active" if active_top_nav_section == 'surveys')}= link_to "Quizzes", surveys_path
-        %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Training Sets", training_sets_path
+        %li.divider-vertical
         %li{class: ("active" if active_top_nav_section == 'profile_sets')}= link_to "Profile Sets", profile_sets_path
+        %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Training Sets", training_sets_path
+        
 
